# PickByLight_RPI

./: .gitignore  CMakeLists.txt  README.md  package.xml
action/: LightControl.action
config/: params.yaml
devel/: .catkin  .rosinstall  setup.sh
devel/include/lightswitch/: LightControlAction.h  LightControlActionFeedback.h  LightControlActionGoal.h  LightControlActionResult.h  LightControlFeedback.h  LightControlGoal.h  LightControlResult.h
devel/lib/lightswitch/: lightswitch_node
devel/lib/pkgconfig/: lightswitch.pc
devel/lib/python2.7/dist-packages/lightswitch/msg/: _LightControlAction.py  _LightControlActionFeedback.py  _LightControlActionGoal.py  _LightControlActionResult.py  _LightControlFeedback.py  _LightControlGoal.py  _LightControlResult.py  __init__.py
devel/share/common-lisp/ros/lightswitch/msg/: LightControlAction.lisp  LightControlActionFeedback.lisp  LightControlActionGoal.lisp  LightControlActionResult.lisp  LightControlFeedback.lisp  LightControlGoal.lisp  LightControlResult.lisp  (+9 more)
devel/share/lightswitch/cmake/: lightswitch-msg-paths.cmake  lightswitchConfig.cmake
devel/share/lightswitch/msg/: LightControlAction.msg  LightControlActionFeedback.msg  LightControlActionGoal.msg  LightControlActionResult.msg  LightControlFeedback.msg  LightControlGoal.msg  LightControlResult.msg
devel/share/roseus/ros/lightswitch/: manifest.l
include/: lightswitch.h
launch/: lightswitch.launch
lightswitch/include/: lightswitch.h
lightswitch/lib/: LaserCmd.h
src/: lightswitch.cpp
src/lightswitch/: package.xml
src/lightswitch/lib/: LaserCmd.cpp
(+15 files in other folders)
